# query-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  results.csv
crates/query-cache/: Cargo.toml
crates/query-cache/src/: cache.rs  config.rs  flight_cache.rs  invalidation.rs  lib.rs  stats.rs
crates/query-cli/: Cargo.toml
crates/query-cli/src/: commands.rs  config.rs  main.rs  repl.rs
crates/query-core/: Cargo.toml
crates/query-core/src/: error.rs  flight.rs  lib.rs  schema.rs  types.rs  udf.rs
crates/query-distributed/: Cargo.toml
crates/query-distributed/src/: coordinator.rs  error.rs  executor.rs  fault.rs  flight_transport.rs  lib.rs  network.rs  operators.rs  partition.rs  planner.rs  scheduler.rs  types.rs  worker.rs
crates/query-executor/: Cargo.toml
crates/query-executor/src/: cached_executor.rs  executor.rs  lib.rs  operators.rs  physical_plan.rs
crates/query-flight/: Cargo.toml
crates/query-flight/src/: client.rs  data_source.rs  error.rs  lib.rs  server.rs  stream_source.rs
crates/query-index/: Cargo.toml
crates/query-index/src/: btree.rs  hash.rs  lib.rs  manager.rs  types.rs
crates/query-parser/: Cargo.toml
crates/query-parser/src/: ast.rs  lexer.rs  parser.rs
crates/query-pgwire/: Cargo.toml
crates/query-pgwire/src/: auth.rs  backend.rs  catalog.rs  cursor.rs  extended.rs  lib.rs  portal.rs  result.rs  server.rs  tls.rs
crates/query-planner/: Cargo.toml
crates/query-planner/src/: lib.rs  logical_plan.rs  optimizer.rs  planner.rs
crates/query-storage/: Cargo.toml
crates/query-storage/src/: csv.rs  lib.rs  memory.rs  parquet.rs
crates/query-streaming/: Cargo.toml
crates/query-streaming/src/: lib.rs  source.rs  stream.rs  watermark.rs  window.rs
data/: departments.csv  employees.csv
docs/: API_GUIDE.md  ARCHITECTURE.md  CACHE_GUIDE.md  CHANGELOG.md  CLI_REFERENCE.md  CRATE_REFERENCE.md  DATA_TYPES.md  DISTRIBUTED_EXECUTION.md  ERROR_HANDLING.md  EXAMPLES.md  FLIGHT_GUIDE.md  GETTING_STARTED.md  INDEX_GUIDE.md  PGWIRE_GUIDE.md  QUERY_OPTIMIZATION.md  README.md  ROADMAP.md  SQL_REFERENCE.md  STREAMING_GUIDE.md  WINDOW_FUNCTIONS.md
examples-package/: Cargo.toml
examples-package/examples/: aggregate_query.rs  caching_query.rs  csv_query.rs  distributed_query.rs  flight_query.rs  full_query_demo.rs  index_query.rs  join_query.rs  pgwire_server.rs  simple_query.rs  streaming_query.rs  subquery_cte_query.rs  udf_query.rs  window_function_query.rs
