[package]
name = "query-engine-examples"
version.workspace = true
edition.workspace = true

[[example]]
name = "simple_query"

[[example]]
name = "aggregate_query"

[[example]]
name = "csv_query"

[[example]]
name = "full_query_demo"


[[example]]
name = "join_query"

[[example]]
name = "subquery_cte_query"

[[example]]
name = "window_function_query"

[[example]]
name = "udf_query"

[[example]]
name = "index_query"

[[example]]
name = "distributed_query"

[[example]]
name = "streaming_query"

[[example]]
name = "caching_query"

[[example]]
name = "flight_query"

[[example]]
name = "pgwire_server"

[dependencies]
query-core = { path = "../crates/query-core" }
query-parser = { path = "../crates/query-parser" }
query-planner = { path = "../crates/query-planner" }
query-executor = { path = "../crates/query-executor" }
query-storage = { path = "../crates/query-storage" }
query-index = { path = "../crates/query-index" }
query-distributed = { path = "../crates/query-distributed" }
query-streaming = { path = "../crates/query-streaming" }
query-cache = { path = "../crates/query-cache" }
query-flight = { path = "../crates/query-flight" }
query-pgwire = { path = "../crates/query-pgwire" }
tokio = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

