[package]
name = "query-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LRU query result cache for Query Engine"

[dependencies]
query-core = { path = "../query-core" }
arrow = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true }
