[package]
name = "query-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "qe"
path = "src/main.rs"

[dependencies]
query-core = { path = "../query-core" }
query-parser = { path = "../query-parser" }
query-planner = { path = "../query-planner" }
query-executor = { path = "../query-executor" }
query-storage = { path = "../query-storage" }
query-index = { path = "../query-index" }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
rustyline = "14.0"
rustyline-derive = "0.10"
colored = "2.1"
comfy-table = "7.1"

# CSV
csv = "1.3"

# Async runtime
tokio = { workspace = true }

# Arrow
arrow = { workspace = true }
parquet = { workspace = true }

# Utilities
anyhow = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
home = "0.5"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
