[package]
name = "query-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
query-core = { path = "../query-core" }
query-planner = { path = "../query-planner" }
query-parser = { path = "../query-parser" }
query-cache = { path = "../query-cache" }
arrow.workspace = true
async-trait.workspace = true
tokio.workspace = true
rayon.workspace = true
futures.workspace = true
parking_lot.workspace = true
ahash.workspace = true

